--- a/Project/Angular/EquityTradingSimulationFrontEnd/src/index.html
+++ b/Project/Angular/EquityTradingSimulationFrontEnd/src/index.html
@@ -4,13 +4,19 @@
 		<meta charset="utf-8">
 		<title>ABC Corp | Equity Trading</title>
 		<base href="/">
+		<!--
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		-->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		
 	</head>
 	<body ng-app="" >
 		<app-root></app-root>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
